package DataStruct;

public enum OperationStartRelationShip {
    SS,
    ES
}
