package DataStruct;

public enum TaskType {
    PARENT,
    CHILD;
}
